--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@ body {
 }
 
 .effect-text {
-  font-size: 35px;
+  font-size: 50px;
   color: #edf2f4;
+  width: 500px;
+  margin: 0 auto;
   position: absolute;
   top: 50%;
   left: 50%;
