--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 body {
-  font-family: 'Press Start 2P', cursive;
+  font-family: 'Pacifico', cursive;
   background-color: #2B2D42;
 }
 
 .effect-text {
-  font-size: 34px;
+  font-size: 50px;
   color: #edf2f4;
   width: 500px;
   margin: 0 auto;
